# titiler-eopf

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CACHE_VALIDATION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DEVLOG.md  Dockerfile  PR.md  README.md  cache-config.env.example  docker-compose.yml  index_problem.md  profiling.ipynb  pyproject.toml  release-please-config.json
.github/prompts/: plan-openeoMigration.prompt.md  plan-tileCachingSystemTitilerEopf.prompt.md
.github/workflows/: check_charts.yaml  ci.yml  docker-build-deploy.yml  docker-helm.yml  release-please.yml  validate-pr-title.yml
.github/workflows/scripts/: check_version.py
dev/benchmarks/: data.js
helm/: values.yaml
helm/charts/: CACHE_CONFIG.md  Chart.yaml  README.md  values.yaml
helm/charts/ci/: default-values.yaml
helm/charts/examples/: cache-external-redis-values.yaml  cache-redis-values.yaml  cache-s3-redis-values.yaml
helm/charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  validation.yaml
helm/charts/test-values/: bitnami-redis-basic.yaml  bitnami-redis-ha.yaml  cache-disabled.yaml  external-redis.yaml
notebooks/: eopf-reader.ipynb  eopf-stac-collection.ipynb  eopf-tiler.ipynb  openeo_load_collection.ipynb  openeo_load_zarr.ipynb  openeo_ndci_cyanobacteria.ipynb  openeo_pyiode.ipynb
services/: eopf-explorer.json
tests/: __init__.py  conftest.py  create_multiscale_fixture.py  test_cache_keys.py  test_cache_middleware.py  test_dataset_cache.py  test_datatree_cache.py  test_endpoints.py  test_eopf_cache_integration.py  test_io.py  test_main.py  test_open_dataset_cache.py  test_open_dataset_cache_perf.py  test_openeo_app.py  test_openeo_io_helpers.py  test_openeo_processes.py  test_optimized_pyramid.py  test_reader.py  test_settings.py  test_stacapi.py
tests/benchmarks/: __init__.py  benchmarks.py
tests/fixtures/: collection.json  item.json
tests/fixtures/eopf_geozarr/S2A_MSIL2A_20250704T094051_N0511_R036_T33SWB_20250704T115824.zarr/: zarr.json
tests/fixtures/eopf_geozarr/S2A_MSIL2A_20250704T094051_N0511_R036_T33SWB_20250704T115824.zarr/measurements/: zarr.json
tests/fixtures/eopf_geozarr/S2A_MSIL2A_20250704T094051_N0511_R036_T33SWB_20250704T115824.zarr/measurements/reflectance/: zarr.json
tests/fixtures/eopf_geozarr/S2A_MSIL2A_20250704T094051_N0511_R036_T33SWB_20250704T115824.zarr/measurements/reflectance/r60m/: zarr.json
tests/fixtures/eopf_geozarr/S2A_MSIL2A_20250704T094051_N0511_R036_T33SWB_20250704T115824.zarr/measurements/reflectance/r60m/0/: zarr.json
tests/fixtures/eopf_geozarr/S2A_MSIL2A_20250704T094051_N0511_R036_T33SWB_20250704T115824.zarr/measurements/reflectance/r60m/1/: zarr.json
tests/fixtures/eopf_geozarr/S2A_MSIL2A_20250704T094051_N0511_R036_T33SWB_20250704T115824.zarr/measurements/reflectance/r60m/2/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/b01/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/b02/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/b03/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/b04/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/b05/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/b06/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r120m/b07/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r360m/: zarr.json
tests/fixtures/eopf_geozarr/S2C_MSIL2A_20260117T101351_N0511_R022_T32TQM_20260117T135312.zarr/measurements/reflectance/r720m/: zarr.json
tests/fixtures/eopf_geozarr/optimized_pyramid.zarr/: zarr.json
tests/fixtures/eopf_geozarr/optimized_pyramid.zarr/measurements/reflectance/: zarr.json
tests/fixtures/eopf_geozarr/optimized_pyramid.zarr/measurements/reflectance/0/: zarr.json
tests/fixtures/eopf_geozarr/optimized_pyramid.zarr/measurements/reflectance/1/: zarr.json
tests/fixtures/eopf_geozarr/optimized_pyramid.zarr/measurements/reflectance/2/: zarr.json
tests/fixtures/eopf_geozarr/optimized_pyramid.zarr/measurements/reflectance/3/: zarr.json
tests/fixtures/eopf_geozarr/optimized_pyramid.zarr/measurements/reflectance/r120m/: zarr.json
titiler/cache/: __init__.py  admin.py  datatree_helpers.py  decorators.py  middleware.py  settings.py
titiler/cache/backends/: __init__.py  base.py  redis.py  s3.py  s3_redis.py
titiler/cache/middleware/: __init__.py
titiler/cache/utils/: __init__.py  keys.py
titiler/eopf/: __init__.py  cache.py  cache_deps.py  dataset_cache.py  dependencies.py  extensions.py  factory.py  main.py  reader.py  settings.py  stac.py  types.py
titiler/eopf/openeo/: __init__.py  main.py  reader.py  stacapi.py
titiler/eopf/openeo/processes/: __init__.py
titiler/eopf/openeo/processes/data/: load_collection.json
titiler/eopf/openeo/processes/implementations/: __init__.py  data_model.py  io.py
titiler/eopf/templates/: chunks.html  header.html  landing.html  viewer.html
(+3778 files in other folders)
